style change that should stop the buttons wrapping on small screen devices :Ryan

--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -77,6 +77,11 @@ li
   list-style: none;
 }
 
+li.inline
+{
+  display: inline !important;
+}
+
 header
 {
   clear: both;
